--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 ## The .gitignore file specifies things that git should ignore. 
 ## This default template includes entries for R, Python and visual studio
-
+.DS_Store
 ##
 ## Add custom entries below here.
 ##
