added kick started datasets to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+datasets/ks-projects-201612.csv
+datasets/ks-projects-201801.csv
 ## The .gitignore file specifies things that git should ignore. 
 ## This default template includes entries for R, Python and visual studio
 .DS_Store
